# Firmware

./: CMakeLists.txt  cmake_port_status
Tools/: posix_apps.py
cmake/: posix-flags.cmake  px4_utils.cmake  qurt-clang-hexagon.cmake  test_arm.sh  test_host.sh  test_qurt.sh
cmake/test/: px4_simple_app_correct.txt  px4_simple_app_input.txt
makefiles/nuttx/: toolchain_gnu-arm-eabi.mk
makefiles/posix/: config_posix_sitl.mk
makefiles/posix-arm/: config_eagle_adsp.mk  config_eagle_default.mk
makefiles/qurt/: config_qurt_adsp.mk  config_qurt_hil.mk  config_qurt_muorb_test.mk  toolchain_hexagon.mk
nuttx-configs/sim/nsh/: appconfig
src/drivers/boards/px4fmu-v2/: CMakeLists.txt
src/drivers/csr_gps/: csr_gps_main.cpp  module.mk
src/drivers/device/: CMakeLists.txt  vdev.cpp  vdev.h  vdev_posix.cpp
src/drivers/hil/: hil.cpp
src/drivers/led/: CMakeLists.txt
src/drivers/mpu9x50/: module.mk  mpu9x50.c  mpu9x50.h  mpu9x50_main.cpp  mpu_spi.c  mpu_spi.h
src/drivers/rc_receiver/: module.mk  rc_receiver_main.cpp
src/drivers/stm32/: CMakeLists.txt
src/drivers/uart_esc/: module.mk  uart_esc_main.cpp
src/examples/px4_simple_app/: CMakeLists.txt  px4_simple_app.c
src/include/mavlink/: mavlink_log.h
src/modules/attitude_estimator_q/: attitude_estimator_q_main.cpp
src/modules/commander/: PreflightCheck.cpp  commander.cpp  commander_helper.h  commander_led.cpp  module.mk  state_machine_helper.cpp
src/modules/ekf_att_pos_estimator/: ekf_att_pos_estimator_main.cpp  estimator_utilities.cpp
src/modules/mavlink/: mavlink_main.cpp  mavlink_main.h  mavlink_params.c  mavlink_receiver.cpp  module.mk
src/modules/mc_att_control/: mc_att_control_main.cpp
src/modules/mc_att_control_multiplatform/: mc_att_control_sim.h
src/modules/mc_pos_control/: mc_pos_control_main.cpp
src/modules/muorb/adsp/: module.mk  px4muorb.cpp  px4muorb.h  uORBFastRpcChannel.cpp
src/modules/muorb/krait/: uORBKraitFastRpcChannel.cpp  uORBKraitFastRpcChannel.hpp
src/modules/position_estimator_inav/: position_estimator_inav_main.c
src/modules/sdlog2/: module.mk  sdlog2.c  sdlog2_params.c
src/modules/sensors/: sensors.cpp
src/modules/simulator/: simulator.cpp  simulator.h  simulator_mavlink.cpp
src/modules/systemlib/: CMakeLists.txt  getopt_long.c  mavlink_log.c  module.mk
src/modules/systemlib/mixer/: CMakeLists.txt  mixer_multirotor.cpp
src/modules/uORB/: CMakeLists.txt  uORBDevices_posix.cpp  uORBMain.cpp
src/systemcmds/mixer/: mixer.cpp
src/systemcmds/param/: param.c
src/systemcmds/perf/: CMakeLists.txt
unittests/uorb_unittests/: uORBCommunicator_gtests.cpp
